force-app/main/default/objects/IManage_WS_to_Entity_Mapping__c/IManage_WS_to_Entity_Mapping__c.object-meta.xml
<CustomObject>
    <description>Relation between Salesforce Object and iManage Workspace.</description>
    <label>IManage WS to Entity Mapping</label>
    <nameField>
        <label>IManage WS to Entity Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IManage WS to Entity Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>