force-app/main/default/objects/IManage_WS_to_Entity_Mapping__c/fields/Auto_created__c.field-meta.xml
<CustomField>
    <fullName>Auto_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-created</label>
    <type>Checkbox</type>
</CustomField>