force-app/main/default/objects/IManage_WS_to_Entity_Mapping__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>Salesforce Object Id</description>
    <label>EntityId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>