force-app/main/default/objects/IManage_WS_to_Entity_Mapping__c/fields/iManage_Workspace_Created_On__c.field-meta.xml
<CustomField>
    <fullName>iManage_Workspace_Created_On__c</fullName>
    <description>The date when the Workspace was created in iManage.</description>
    <label>iManage Workspace Created On</label>
    <length>30</length>
    <type>Text</type>
</CustomField>