force-app/main/default/objects/IManage_WS_to_Entity_Mapping__c/fields/iManage_WS_Id__c.field-meta.xml
<CustomField>
    <fullName>iManage_WS_Id__c</fullName>
    <description>iManage Workspace Id</description>
    <label>iManage Workspace Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>