force-app/main/default/objects/IManage_WS_to_Entity_Mapping__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>SF - if the record was created by a user in Salesforce.
IM- if the record was created by a user in iManage.</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>